--- a/production.html
+++ b/production.html
@@ -373,10 +373,10 @@
 			<section class="production">
 				<div class="container">
 					<div class="title-box">
-						<h2 class="title">производство</h2>
+						<h2 class="title">Производство</h2>
 					</div>
 					<div class="production__inner">
-						<a href="#" class="product-box">
+						<a href="index.html" class="product-box">
 							<div class="product-box__photo">
 								<img src="assets/images/production_1.jpg" alt="">
 							</div>
@@ -565,7 +565,7 @@
 								<div class="product-box__subtitle">чушка, пруток, проволока</div>
 							</div>
 						</a><!--/product-box-->
-						<a href="#" class="product-box">
+						<a href="index.html" class="product-box">
 							<div class="product-box__photo">
 								<img src="assets/images/production_22.jpg" alt="">
 							</div>
