--- a/index.html
+++ b/index.html
@@ -677,17 +677,17 @@
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_3.png" alt="">
+									<img src="assets/images/partner_3.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_1.png" alt="">
+									<img src="assets/images/partner_1.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 							<div class="partner__slide">
 								<div class="partner-box">
-									<img src="assets/images/partner_2.png" alt="">
+									<img src="assets/images/partner_2.svg" alt="">
 								</div>
 							</div><!--/partner__slide-->
 						</div>
