--- a/contact.html
+++ b/contact.html
@@ -584,13 +584,13 @@
 					</div><!--/address-card-->
 				</div>
 				<div class="address-map">
-					<div class="address-map__content">
-						<img src="assets/images/map.png" alt="">
-					</div>
-					<div class="container">
-						<a href="https://yandex.ru/maps/org/npo_feniks/1464768750/?ll=30.555597%2C59.790230&source=wizbiz_new_map_single&z=17" class="address-logo">
-							<img src="assets/images/icons/logo.svg" alt="">
-						</a>
+					<div class="address-map__content" id="map">
+						<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=89611f12-74a6-43cc-bb51-779a8262b656" type="text/javascript"></script>
+
+						<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6c13a0b19dce0f4da045b5208663235285a98a6e9ceef177b2a30ff35c8b3f48&amp;width=100%&amp;height=850&amp;lang=ru_RU&amp;scroll=true"></script> -->
+
+						
+						<script src="assets/js/map.js" type="text/javascript"></script>
 					</div>
 				</div>
 			</div><!--/address-->
