--- a/photogallery.html
+++ b/photogallery.html
@@ -385,90 +385,164 @@
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_1.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_2.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя.</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_3.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги.</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_4.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title">
+									<a href="#">Название товара</a>
+								</h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_5.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_6.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_7.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_8.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_9.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_10.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_11.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_1.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_8.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_3.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_6.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_9.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_4.png" data-fancybox="photogallery" alt="">
 							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
+							</div>
 						</div><!--/photogallery__item-->
 						<div class="photogallery__item">
 							<div class="photogallery__photo">
 								<img src="assets/images/photogallery/photogallery_5.png" data-fancybox="photogallery" alt="">
+							</div>
+							<div class="photogallery__info">
+								<h3 class="photogallery__title"><a href="#">Название товара</a></h3>
+								<div class="photogallery__description">ООО НПО «Феникс» предоставляет услуги по доставке продукции до покупателя. Мы беспечиваем оперативную доставку нашей</div>
 							</div>
 						</div><!--/photogallery__item-->
 					</div>
