--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
 					<a href="/" class="header-logo">
 						<img src="assets/images/icons/logo.svg" alt="">
 						<div class="header-logo__title">
-							<span>Феникс</span>
-							<span>Научно-производственное объединение</span>
+							<span>НПО Феникс</span>
 						</div>
 					</a>
 					<div class="header-contact">
