--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 			</section><!--/labor-->
 			<section class="delivery bg-gray bg-line bg-line_left">
 				<div class="delivery__map">
-					<img src="assets/images/map.png" alt="">
+					<img src="assets/images/map.svg" alt="">
 				</div>
 				<div class="container">
 					<div class="title-box">
