--- a/production.html
+++ b/production.html
@@ -417,48 +417,37 @@
 						</a>
 						<div class="manufacture-filter__inner">
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_all" checked>
-								<label for="manufacture-filter_all">Вся продукция</label>
+								<a href="#" class="active">Вся продукция</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_cu">
-								<label for="manufacture-filter_cu">Медь</label>
+								<a href="#">Медь</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_pb">
-								<label for="manufacture-filter_pb">Свинец</label>
+								<a href="#">Свинец</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_bronze">
-								<label for="manufacture-filter_bronze">Бронза</label>
+								<a href="#">Бронза</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_brass">
-								<label for="manufacture-filter_brass">Латунь</label>
+								<a href="#">Латунь</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_solder">
-								<label for="manufacture-filter_solder">Припои</label>
+								<a href="#">Припои</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_zn">
-								<label for="manufacture-filter_zn">Цинк</label>
+								<a href="#">Цинк</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_sn">
-								<label for="manufacture-filter_sn">Олово</label>
+								<a href="#">Олово</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_babbit">
-								<label for="manufacture-filter_babbit">Баббиты</label>
+								<a href="#">Баббиты</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_indium">
-								<label for="manufacture-filter_indium">Индий</label>
+								<a href="#">Индий</a>
 							</div><!--/manufacture-filter__item-->
 							<div class="manufacture-filter__item">
-								<input type="radio" name="manufacture-filter" id="manufacture-filter_antimony">
-								<label for="manufacture-filter_antimony">Сурьма</label>
+								<a href="#">Сурьма</a>
 							</div><!--/manufacture-filter__item-->
 						</div>
 					</div><!--/manufacture-filter-->
