--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 			<section class="work bg-gray bg-line bg-line_right">
 				<div class="container">
 					<div class="title-box">
-						<h2 class="title">как мы работаем</h2>
+						<h2 class="title">Как мы работаем</h2>
 					</div>
 					<div class="work__inner">
 						<div class="work__item">
