--- a/index.html
+++ b/index.html
@@ -260,16 +260,10 @@
 								<a href="#" class="nav__link">Лаборатория <span>платные услуги</span></a>
 							</li>
 							<li>
-								<a href="#" class="nav__link">Блог</a>
+								<a href="#" class="nav__link">Доставка</a>
 							</li>
 							<li>
-								<a href="#" class="nav__link">Вакансии</a>
-							</li>
-							<li>
-								<a href="about.html" class="nav__link">О Нас</a>
-							</li>
-							<li>
-								<a href="#" class="nav__link">Контакты</a>
+								<a href="#" class="nav__link">Фото</a>
 							</li>
 						</ul>
 					</nav>
@@ -304,6 +298,12 @@
 							</li>
 							<li>
 								<a href="#" class="mobile-menu__link">Контакты</a>
+							</li>
+							<li>
+								<a href="#" class="mobile-menu__link">Доставка</a>
+							</li>
+							<li>
+								<a href="#" class="mobile-menu__link">Фото</a>
 							</li>
 						</ul>
 					</div>
